Minor Change In Template

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -33,7 +33,7 @@
         <div class="container-login100" style="background-image: url('{% static 'login/images/edited1.jpg' %}');">
             <div class="wrap-login100">
                 <form class="login100-form validate-form">
-					<span class="login100-form-title p-b-26">
+					<span class="login100-form-title">
 						Welcome To The Online Booking Portal Of IIIT Allahabad
 					</span>
                     <hr>
