--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -24,13 +24,13 @@
                 </li>
                 {% if current_request %}
                     {% if  not current_request.status %}
-                <li>
-                    <a href="{% url 'edit' %}">
-                        <i class="pe-7s-credit"></i>
-                        <p>Edit</p>
-                    </a>
-                </li>
-                {% endif %}
+                        <li>
+                            <a href="{% url 'edit' %}">
+                                <i class="pe-7s-credit"></i>
+                                <p>Edit</p>
+                            </a>
+                        </li>
+                    {% endif %}
                 {% endif %}
                 <li class="active">
                     <a href="https://www.iiita.ac.in/">
@@ -160,11 +160,11 @@
                 <div class="container-fluid">
                     <nav class="pull-left">
                         <ul>
-                            {#                            <li>#}
-                            {#                                <a href="#">#}
-                            {#                                    Home#}
-                            {#                                </a>#}
-                            {#                            </li>#}
+                            <li>
+                                <a href="https://www.facebook.com/vaib79">
+                                    Developed By Vaibhav Gupta
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
