--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -79,7 +79,9 @@
                        class="btn btn-block btn-social btn-lg btn-google btn-round btn-lg">
                         <span class="fa fa-google" style="padding-top: 2px;"></span>Login with Google</a>
             </div>
+        <div class="col-md-12"><p align="center" style="color: white;">Developed By <a href="https://www.facebook.com/vaib79" style="color: white;" id="credits">Vaibhav Gupta</a></p></div>
         </div>
+
     </div>
     <div id="dropDownSelect1"></div>
 
