--- a/templates/staffUser/edit.html
+++ b/templates/staffUser/edit.html
@@ -139,11 +139,11 @@
                 <div class="container-fluid">
                     <nav class="pull-left">
                         <ul>
-                            {#                            <li>#}
-                            {#                                <a href="#">#}
-                            {#                                    Home#}
-                            {#                                </a>#}
-                            {#                            </li>#}
+                            <li>
+                                <a href="https://www.facebook.com/vaib79">
+                                    Developed By Vaibhav Gupta
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
