--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <title>
         {% block title %}Home{% endblock %}
     </title>
+    <link rel="icon" type="image/png" href="{% static 'login/images/favicon.png' %}"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta charset="utf-8"/>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
