--- a/templates/homepage/edit.html
+++ b/templates/homepage/edit.html
@@ -89,19 +89,21 @@
 
             <footer class="footer">
                 <div class="container-fluid">
+
                     <nav class="pull-left">
                         <ul>
-                            {#                            <li>#}
-                            {#                                <a href="#">#}
-                            {#                                    Home#}
-                            {#                                </a>#}
-                            {#                            </li>#}
+                            <li>
+                                <a href="https://www.facebook.com/vaib79">
+                                    Developed By Vaibhav Gupta
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
             </footer>
 
         </div>
+
     </div>
 {% endblock %}
 {% block extra_script %}
